--- a/projects/assets/css/main.css
+++ b/projects/assets/css/main.css
@@ -9,6 +9,7 @@
 		border: 0;
 		font-size: 100%;
 		font: inherit;
+        height:auto;
 		vertical-align: baseline;
 	}
 
@@ -1696,7 +1697,7 @@
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		margin: 0 0 .5em 0;
         color:#000;
 /*        width:52em;*/
 	}
@@ -1717,7 +1718,13 @@
     
     }
 
-    h3, h4, h5, h6 {
+    h3{
+        color:#000;
+        text-align: center;
+        font-weight: bold;
+    } 
+
+    h4, h5, h6 {
 		color: #000;
 		font-weight: bold;
 		line-height: 1.5;
@@ -2681,6 +2688,12 @@
 			padding-left: 0.5em;
 		}
 
+#more ul{
+    padding-left:0
+}
+#more ul li{
+    display: inline;
+}
 		ul.alt {
 			list-style: none;
 			padding-left: 0;
@@ -3543,6 +3556,7 @@
 		}
 
 	#footer > .inner .menu {
+        font-family: 'Nanum Myeongjo', serif;
 		font-size: 0.8em;
 		color: #000;
 	}
@@ -3928,6 +3942,28 @@
 		}
 
 
+.container{
+    max-width: 56em;
+    text-align: center;
+}
+
+
+.container2{
+    max-width: 56em;
+    display:flex;
+    text-align: left;
+    
+}
+
+.container2-left{
+    width: 40em;
+}
+.container2-right{
+    width: 16em;
+    left:auto;
+}
+
+
 /* Intro */
 
 	#intro {
@@ -3975,15 +4011,27 @@
             padding: .5em 0em 0em 0em;
         }
 
-			@media screen and (max-width: 980px) {
+@media screen and (max-width: 980px) {
 
 				#intro p br {
 					display: none;
 				}
+    
+    .container2{
+    max-width: 56em;
+    display:flex wrap;
+    text-align: left;
+    
+}
+    
+.container2-right{
+    width: 40em;
+    left:auto;
+}
 
 			}
 
-			@media screen and (max-width: 736px) {
+@media screen and (max-width: 736px) {
 
 				#intro p {
 					font-size: 1em;
@@ -3991,15 +4039,35 @@
                 #intro article{
                     resize:both;
                 }
-
+    
+        .container2{
+    max-width: 56em;
+    display:wrap;flex-wrap: nowrap;
+    text-align: left;
+    
+}
+.container2-right{
+    width: 36em;
+    left:auto;
+}
 			}
 
-		@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1280px) {
 
 			#intro {
 				background-attachment: scroll;
 			}
-
+    .container2{
+    max-width: 56em;
+    display:flex;
+    text-align: left;
+    
+}
+    
+.container2-right{
+    width: 36em;
+    left:auto;
+}
 		}
 
 /*one*/
@@ -4088,23 +4156,6 @@
 		}
 
 
-.container{
-    max-width: 56em;
-    text-align: center;
-}
-
-.container2{
-    max-width: 56em;
-    display:flex;
-    
-}
-
-.container2-left{
-    width: 40em;
-}
-.container2-right{
-    width: 16em;
-}
 
 
         #intro article {
