--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body::-webkit-scrollbar-thumb:hover{
 */
 
 .resume{
-    font-family: 'Julius Sans One', sans-serif;
+    font-family: 'Nanum Myeongjo', serif;
 }
 
 button,hr,input{
@@ -575,10 +575,10 @@ p.logo [data-text]:before{
 #description,#description span.shorten{display:none}
 [data-filter]{
     position:relative;
-    padding:.25em 0;
+    padding:.3em 0;
     transition:color .3s ease}
 
-[data-filter].inactive:after{bottom:1.1em; }
+[data-filter].inactive:after{bottom:.8em; }
 [data-filter].inactive:hover:after{bottom:.2em}
 
 
@@ -611,10 +611,10 @@ p.logo [data-text]:before{
     content:"";
     position:absolute;
     width:100%;
-    height:2px;
+    height:1.1px;
     background-color:#000;
     left:0;
-    bottom:.2em;
+    bottom:.1em;
     transition:all .3s ease}
 
 #links li a,.grid li,.grid li a{
@@ -880,7 +880,12 @@ aside h3{margin:.5em}
 
 #error .videoWrapper iframe{position:absolute;top:0;left:0;width:100%;height:100%}
 
-footer{padding:0 .7em 0 1em;display:flex;flex-wrap:wrap;margin-top:2em}
+footer{
+    padding:0 .7em 0 1em;
+    display:flex;
+    flex-wrap:wrap;
+    margin-bottom:2em;
+    position:relative;}
 
 footer section{
     font-family: 'Nanum Myeongjo', serif; 
@@ -892,11 +897,7 @@ footer section ul{margin:0}
 .slider footer{padding:0}
 
 h3{font-size:1.8em;margin-top:0}
-footer form{white-space:nowrap;width:100%}
-footer input{background:0 0;border:1px solid #333;height:2.65em;padding:.65em 1em;vertical-align:top}
-footer input.email{max-width:18em;width:80%}
-footer input.button{margin-left:-1px;cursor:pointer;transition:all .1s ease}
-footer input.button:hover{color:#fff;background-color:#000}
+
 .address{margin:0}
 .arrow{position:relative;width:3em;height:3em;margin-top:4em;padding:0;flex:1;margin-right:-.5em}
 footer .arrow{display:block}
@@ -950,7 +951,7 @@ footer .arrow{display:block}
         height:calc(56vw + 1.9em);
         box-shadow: 0 2px 44px 0 rgba(0,0,0,.1);
         border-radius: 10px;}
-    footer .arrow{display:none}
+/*    footer .arrow{display:none}*/
     #clients,#feats,#skills,#team li{width:32%}
     #error article p,#presentation{font-size:1.75em;padding-right:.5em}
     #hello{font-size:7em;line-height:1em;margin-top:.3em}
@@ -966,7 +967,8 @@ footer .arrow{display:block}
 }
 
 @media only screen and (min-width:43em){
-    footer .arrow{display:block}}
+    footer .arrow{display:block}
+}
 
 @media only screen and (min-width:48em){
     .logo{
@@ -1032,7 +1034,9 @@ footer .arrow{display:block}
     ul.grid li.landscape article{height:23vw}
     ul.grid li.portrait article{height:calc(46vw + 1.9em)}
     
-    #links li:nth-of-type(n+2){display:inline}#hello{font-size:14em;line-height:.8em;margin-left:-10px}#hello:after{margin-left:10px}#lists:after{width:7em}footer .arrow{display:none}}
+    #links li:nth-of-type(n+2){display:inline}#hello{font-size:14em;line-height:.8em;margin-left:-10px}#hello:after{margin-left:10px}#lists:after{width:7em}
+/*    footer .arrow{display:none}*/
+}
 
 @media only screen and (min-width:48em) and (min-height:39em){
     .logo{
@@ -1054,10 +1058,10 @@ footer .arrow{display:block}
 
 @media only screen and (min-width:48em) and (min-height:45em),only screen and (min-width:60em) and (min-height:34em),only screen and (min-width:100em) and (min-height:29em){
     #description{
-        font-family: 'Pragati Narrow', sans-serif;
-        font-size:2em;
+/*        font-family: 'Vollkorn', serif;*/
+        font-size:1.5em;
         line-height:1.5em;
-        max-width:12em;
+        max-width:15em;
         display:block;
         margin:.7em 0}}
 
