--- a/projects/assets/css/main.css
+++ b/projects/assets/css/main.css
@@ -2065,6 +2065,59 @@
 					opacity: 0.1;
 				}
 
+/* ===========  8. Preload  =========== */
+
+
+#preload {
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: 9999999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+#preload .kd-bounce {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  margin: 40px auto;
+	
+}
+#preload .kd-bounce:before,
+#preload .kd-bounce:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #242424;
+  opacity: 0.4;
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: kd-bounce 2.4s infinite ease-in-out;
+}
+#preload .kd-bounce:after {
+  animation-delay: -1.2s;
+}
+@keyframes kd-bounce {
+  0%,
+  100% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
+
 /* Features */
 
 	.features {
@@ -3533,6 +3586,89 @@
 	}
 
 /* Footer */
+
+.navigation {
+    width: 30%;
+	border: 2px solid #2e2e2e;
+    border-radius: 50px;
+	cursor: pointer;
+	letter-spacing: 0.2125rem;
+	overflow: hidden;
+	padding: 20px 30px;
+	position: relative;
+	text-align: center;
+	text-transform: uppercase;
+	transition: 
+		background 5s cubic-bezier(0.19, 1, 0.22, 1),
+		border 1s cubic-bezier(0.19, 1, 0.22, 1),
+		color 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+	user-select: none;
+}
+
+.navigation a {
+	color: #000;
+    font-family: 'Roboto';
+    overflow: hidden;
+    font-size:0.8em;
+	text-decoration: none;
+}
+
+.navigation .mask {
+	background-color: #000;
+	background-color: rgba(255, 255, 255, 0.5);
+	height: 100px;
+	position: absolute;
+	transform: translate3d(-120%, -50px, 0) rotate3d(0, 0, 1, 45deg);
+	transition: all 1.1s cubic-bezier(0.19, 1, 0.22, 1);
+	width: 200px;
+}
+
+.navigation .hide{
+    display:none;
+}
+.navigation .shift {
+	display: inline-block;
+	transition: all 1.1s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.navigation:hover {
+	background-color: rgba(0, 0, 0, 1);
+    padding-top:22px;
+	border-color: #fff;
+	box-shadow: 0 0 5px rgba(0,0,0 0.8);
+	transition: background 0s;
+}
+
+.navigation:hover a {
+	color: #fff;
+}
+.navigation:hover .hide {
+	display:contents
+}
+.navigation:hover .before {
+	display:none
+}
+
+.navigation:hover .mask {
+	background-color: #fff;
+	transform: translate3d(120%, -100px, 0) rotate3d(0, 0, 1, 90deg);
+}
+
+.navigation:hover .shift {
+	transform: translateX(5px);
+}
+
+.navigation:active {
+	background-color: #fff;
+}
+
+.navigation:active a {
+	color: #202020;
+}
+
+navigation.show {
+	background-color: #282828;
+}
 
 .arrow{
     position:relative;
