--- a/projects/assets/css/tezign.css
+++ b/projects/assets/css/tezign.css
@@ -1696,6 +1696,7 @@
 	}
 
 	p {
+        
 		margin: 0 0 2em 0;
         color:#000;
 /*        width:52em;*/
@@ -1711,6 +1712,7 @@
 }
 
     h2{
+        font-family: 'Crimson Text', serif;
         color:#3FF3D4;
         text-align: left;
         
@@ -1718,6 +1720,7 @@
     }
 
     h3, h4, h5, h6 {
+        
 		color: #000;
 		font-weight: bold;
 		line-height: 1.5;
@@ -1890,6 +1893,58 @@
 			border-radius: 0;
 			padding: 0;
 		}
+/* ===========  8. Preload  =========== */
+
+
+#preload {
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #1A2E35;
+  z-index: 9999999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+#preload .kd-bounce {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  margin: 40px auto;
+	
+}
+#preload .kd-bounce:before,
+#preload .kd-bounce:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.4;
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: kd-bounce 2.4s infinite ease-in-out;
+}
+#preload .kd-bounce:after {
+  animation-delay: -1.2s;
+}
+@keyframes kd-bounce {
+  0%,
+  100% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
 
 /* Button */
 
@@ -3521,6 +3576,89 @@
 	}
 
 /* Footer */
+.navigation {
+    width: 30%;
+	border: 2px solid #fff;
+    border-radius: 50px;
+	cursor: pointer;
+	letter-spacing: 0.2125rem;
+	overflow: hidden;
+	padding: 20px 30px;
+	position: relative;
+	text-align: center;
+	text-transform: uppercase;
+	transition: 
+		background 5s cubic-bezier(0.19, 1, 0.22, 1),
+		border 1s cubic-bezier(0.19, 1, 0.22, 1),
+		color 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+	user-select: none;
+}
+
+.navigation a {
+	color: #fff;
+    font-family: 'Roboto';
+    overflow: hidden;
+    font-size:0.8em;
+	text-decoration: none;
+}
+
+.navigation .mask {
+	background-color: #000;
+	background-color: rgba(255, 255, 255, 0.5);
+	height: 100px;
+	position: absolute;
+	transform: translate3d(-120%, -50px, 0) rotate3d(0, 0, 1, 45deg);
+	transition: all 1.1s cubic-bezier(0.19, 1, 0.22, 1);
+	width: 200px;
+}
+
+.navigation .hide{
+    display:none;
+}
+.navigation .shift {
+	display: inline-block;
+	transition: all 1.1s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.navigation:hover {
+	background-color: rgba(0, 0, 0, 1);
+    padding-top:22px;
+	border-color: #3FF3D4;
+	box-shadow: 0 0 5px rgba(0,0,0 0.8);
+	transition: background 0s;
+}
+
+.navigation:hover a {
+	color: #3FF3D4;
+}
+.navigation:hover .hide {
+	display:contents
+}
+.navigation:hover .before {
+	display:none
+}
+
+.navigation:hover .mask {
+	background-color: #fff;
+	transform: translate3d(120%, -100px, 0) rotate3d(0, 0, 1, 90deg);
+}
+
+.navigation:hover .shift {
+	transform: translateX(5px);
+}
+
+.navigation:active {
+	background-color: #fff;
+}
+
+.navigation:active a {
+	color: #202020;
+}
+
+navigation.show {
+	background-color: #282828;
+}
+
 .arrow{
     position:relative;
     width:3em;
@@ -3884,6 +4022,28 @@ footer .arrow{display:block}
 					max-width: 100%;
 				}
 
+
+#sidebar nav .b{color: rgba(255,255,255, 0.2);}
+#sidebar nav .b:before {background:#404040;}
+#sidebar nav .b:after {
+				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: linear-gradient(to right, #fff, #fff);
+			}
+#sidebar nav .b:hover {
+				color: rgba(255, 255, 255, 0.65);
+			}
+
+#sidebar nav .b.active {
+				color: #fff;
+			}
+
+#sidebar nav .b.active:after {
+					max-width: 100%;
+				}
+
+
 		body.is-loading #sidebar > .inner {
 			opacity: 0;
 		}
@@ -3962,7 +4122,7 @@ footer .arrow{display:block}
 
 						#sidebar nav a:after {
 							background-image: none;
-							background-color: #3FF3D4;
+							background-color: #7A89FF;
 						}
 
 		}
@@ -3992,11 +4152,12 @@ footer .arrow{display:block}
 }
 
 .container2-left{
-    width: 40em;
+    width: 56em;
+    text-align: center;
 }
 .container2-right{
-    width: 16em;
-    left:auto;
+    width: 56em;
+   text-align: center;
 }
 
 
