--- a/projects/assets/css/main.css
+++ b/projects/assets/css/main.css
@@ -3588,13 +3588,14 @@
 /* Footer */
 
 .navigation {
-    width: 30%;
+    width: 3em;
+    height: 3em;
 	border: 2px solid #2e2e2e;
-    border-radius: 50px;
+    border-radius: 50%;
 	cursor: pointer;
 	letter-spacing: 0.2125rem;
 	overflow: hidden;
-	padding: 20px 30px;
+	padding: .5em 1em;
 	position: relative;
 	text-align: center;
 	text-transform: uppercase;
@@ -3605,11 +3606,11 @@
 	user-select: none;
 }
 
-.navigation a {
+.navigation .shift {
 	color: #000;
     font-family: 'Roboto';
     overflow: hidden;
-    font-size:0.8em;
+    font-size:1em;
 	text-decoration: none;
 }
 
@@ -3619,32 +3620,27 @@
 	height: 100px;
 	position: absolute;
 	transform: translate3d(-120%, -50px, 0) rotate3d(0, 0, 1, 45deg);
-	transition: all 1.1s cubic-bezier(0.19, 1, 0.22, 1);
+	transition: all 1.1s cubic-bezier(0.19, 0, 0.22, 0);
 	width: 200px;
 }
 
-.navigation .hide{
-    display:none;
-}
 .navigation .shift {
 	display: inline-block;
-	transition: all 1.1s cubic-bezier(0.19, 1, 0.22, 1);
+	transition: all 1.1s cubic-bezier(0.09, 1, 0.02, 1);
 }
 
 .navigation:hover {
 	background-color: rgba(0, 0, 0, 1);
-    padding-top:22px;
+    padding-left:0.5em;
 	border-color: #fff;
 	box-shadow: 0 0 5px rgba(0,0,0 0.8);
 	transition: background 0s;
 }
 
-.navigation:hover a {
+.navigation:hover .shift {
 	color: #fff;
 }
-.navigation:hover .hide {
-	display:contents
-}
+
 .navigation:hover .before {
 	display:none
 }
@@ -3673,11 +3669,11 @@ navigation.show {
 .arrow{
     position:relative;
     width:3em;
-    height:6em;
-    margin-top:4em;
+    height:5em;
+    margin-top:8em;
     padding:0;
     flex:1;
-    margin-right:-.5em;
+    margin-right:0em;
 }
 footer .arrow{display:block}
 .arrow svg{
@@ -3699,7 +3695,7 @@ footer .arrow{display:block}
     position:fixed;
     bottom:0em;
     right:1em;
-    width:5em;
+    width:3em;
     height:10em;
     z-index: 10001;
             }
