--- a/css/styles.css
+++ b/css/styles.css
@@ -775,11 +775,14 @@ body {
 }
 .navigation-wrap a {
   display: inline-block;
-  width: 50px;
+  width: 40px;
   height: 40px;
+  border-radius: 50%;
   line-height: 40px;
   margin-right: 10px;
-  background-color: #cccccc;
+    margin-top: 10px;
+  background-color: #fff;
+  box-shadow: 0 2px 10px 0 rgba(0,0,0,.05);
   opacity: 1;
   -webkit-transition: opacity 0.3s ease;
   -moz-transition: opacity 0.3s ease;
@@ -795,7 +798,7 @@ body {
 }
 .project .detail-content {
   padding: 50px;
-  background-color: #eeeeee;
+  background-color: #f2f2f2;
 }
 .project .title {
   color: #000000;
@@ -822,7 +825,6 @@ body {
   padding-bottom: 10px;
 }
 .project .value {
-  font-style: italic;
   width: 70%;
   padding-bottom: 10px;
 }
@@ -1066,6 +1068,8 @@ body {
   padding: 0;
 }
 /* ===========  8. Preload  =========== */
+
+
 #preload {
   top: 0;
   left: 0;
@@ -1087,6 +1091,7 @@ body {
   height: 40px;
   position: relative;
   margin: 40px auto;
+	
 }
 #preload .kd-bounce:before,
 #preload .kd-bounce:after {
@@ -1207,6 +1212,7 @@ body {
   }
   .project-item {
     margin-bottom: 30px;
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,.05);
   }
 }
 @media screen and (max-width: 600px) {
@@ -1241,6 +1247,7 @@ body {
   }
   .project-item {
     margin-bottom: 20px;
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,.05);
   }
   #comments .comment-avatar {
     float: none;
