--- a/projects/assets/css/dark.css
+++ b/projects/assets/css/dark.css
@@ -1914,14 +1914,15 @@
 }
 
 .preload .rubik-loader {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   position: absolute;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   background-image: url(../loader.gif);
+  background-size: 50%;
   background-repeat: no-repeat;
   background-position: center;
 }
