--- a/projects/assets/css/main.css
+++ b/projects/assets/css/main.css
@@ -2084,14 +2084,16 @@
   overflow: hidden;
 }
 .preload .rubik-loader {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   position: absolute;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+    
   background-image: url(../loader.gif);
+    background-size: 50%;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -4227,11 +4229,10 @@ footer .arrow{display:block}
 }
     
 .container2-left{
-    width: 50em;
+    width: 40em;
 }
 .container2-right{
     width: 16em;
-    left:auto;
 }
 			}
 
